CSS Fixes on small mobile screen

--- a/components/Background/Background.module.css
+++ b/components/Background/Background.module.css
@@ -13,3 +13,15 @@
   gap: 2rem;
   align-items: baseline;
 }
+
+@media (max-width: 768px) {
+  .institution {
+    gap: 0.5rem;
+    flex-wrap: wrap;
+  }
+
+  .institution h2,
+  .institution h4 {
+    margin: 0;
+  }
+}
