--- a/components/Experiences/Experiences.module.css
+++ b/components/Experiences/Experiences.module.css
@@ -47,13 +47,23 @@
   }
 
   .date {
-    justify-content: space-around;
-    align-items: flex-start;
+    gap: 0.5rem;
+    flex-wrap: wrap;
   }
 
   .badge {
     font-size: 10px;
     padding: 0.4rem;
     margin-left: 0.2rem;
+  }
+
+  .company {
+    gap: 0.5rem;
+    flex-wrap: wrap;
+  }
+
+  .company h2,
+  .company h4 {
+    margin: 0;
   }
 }
