--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -25,8 +25,8 @@
 
 @media (max-width: 768px) {
   .title {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: var(--text-on-dark);
-    padding: 0.8rem 1.5rem;
+    padding: 0.8rem;
   }
 }
